--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.5",
     "@radix-ui/react-dropdown-menu": "^2.1.5",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-popover": "^1.1.5",
@@ -19,11 +20,11 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "lucide-react": "^0.474.0",
-    "next": "15.1.6",
-    "react": "^19.0.0",
+    "next": "14.2.5",
+    "react": "^18",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^19.0.0",
-    "tailwind-merge": "^3.0.1",
+    "react-dom": "^18",
+    "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
